<resources>
    <string name="app_name">LOC8TE</string>

    <!-- These are the sample arrays for spinners -->
    <string-array name="account_types_array">
        <item>client</item>
        <item>professional</item>
    </string-array>
    <string-array name="sample_names_array">
        <item>Mary Angeline</item>
        <item>Allen Christopher</item>
        <item>Mark Jason</item>
        <item>Joshua Matthew</item>
    </string-array>
    <string-array name="radius_array">
        <item>All</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>3 km</item>
        <item>4 km</item>
        <item>5 km</item>
        <item>6 km</item>
        <item>7 km</item>
        <item>8 km</item>
        <item>9 km</item>
        <item>10 km</item>
    </string-array>
    <string-array name="fields_array">
        <item>medical and health</item>
        <item>technology</item>
        <item>skilled trade</item>
        <item>business administration</item>
        <item>education</item>
        <item>law</item>
        <item>food, culinary, events</item>
        <item>arts, humanities, liberal arts</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="google_maps_api_key">AIzaSyC4GhSHEe6HilqTbHRJnmIosrel_SLdTYU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_header">EVENTS</string>
    <string name="general_events_text">General Events</string>
    <string name="industry_events_text">Industry Events</string>
    <string name="my_events_text">My Events</string>
    <string name="general__itemheader">General Events</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis tristique sollicitudin nibh sit amet.</string>
    <string name="description_header">Description</string>
    <string name="set_path_text">Selecting a starting path is needed to calculate the nearest professional.</string>
    <string name="no_internet_popup_text">Sorry! We Couldn\'t Connect to the Server.</string>
</resources>
