<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FragmentEvent">

    <!-- TODO: Update blank fragment layout -->

    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/my_events_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/header_event"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        card_view:cardCornerRadius="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/my_events_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_events_text"
                android:textStyle="bold"
                android:textColor="@color/secondaryColor"
                android:fontFamily="@font/open_sans_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_general_events"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/secondary_color_round_corners"
                android:fontFamily="@font/glacial_indifference"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/general_events_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/my_events_view"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        card_view:cardCornerRadius="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/general_events_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/industry_events_text"
                android:textStyle="bold"
                android:textColor="@color/secondaryColor"
                android:fontFamily="@font/open_sans_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_industry_events"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/secondary_color_round_corners"
                android:fontFamily="@font/glacial_indifference"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/industry_events_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/general_events_view"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        card_view:cardCornerRadius="10dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/industry_events_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_events_text"
                android:textStyle="bold"
                android:textColor="@color/secondaryColor"
                android:fontFamily="@font/open_sans_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_my_events"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/secondary_color_round_corners"
                android:fontFamily="@font/glacial_indifference"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</RelativeLayout>